components can re-register with a new defFn; dev+reload scripts

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "chai": "^5.1.0",
     "jsdom-global": "^3.0.2",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.3",
+    "ws": "^8.16.0"
   }
 }
