using tokens, better tokens, improved livereload, app progress

--- a/examples/project-board/package.json
+++ b/examples/project-board/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "tsc": "tsc",
-    "dev": "tsc --watch"
+    "tsc-dev": "tsc --watch",
+    "dev": "node ./dev.js"
   }
 }
