--- a/package.json
+++ b/package.json
@@ -1,18 +1,5 @@
 {
-  "name": "vena",
-  "version": "1.0.0-alpha",
-  "description": "Exploratory component based architecture using web components",
+  "private": true,
   "author": "chandler.prall@gmail.com",
-  "license": "OSL-3.0",
-  "type": "module",
-  "scripts": {
-    "tsc": "tsc",
-    "dev": "tsc --watch"
-  },
-  "devDependencies": {
-    "chai": "^5.1.0",
-    "jsdom-global": "^3.0.2",
-    "typescript": "^5.4.3",
-    "ws": "^8.16.0"
-  }
+  "license": "OSL-3.0"
 }
