--- a/packages/jsx-runtime/tsconfig.json
+++ b/packages/jsx-runtime/tsconfig.json
@@ -6,17 +6,14 @@
     "noEmit": false,
     "outDir": "./build",
     "sourceMap": true,
-    "declaration": false,
+    "declaration": true,
 
     "strict": true,
     "alwaysStrict": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
     "strictNullChecks": true,
-    "noUnusedLocals": true,
-
-    "jsx": "react-jsx",
-    "jsxImportSource": "@venajs"
+    "noUnusedLocals": true
   },
   "include": [
     "src/**/*"
